syntax="proto3";

package pb;

import "google/protobuf/empty.proto";

option go_package = "github.com/mavleo96/bft-mavleo96/pb";

service LinearPBFTNode {
    rpc TransferRequest (TransactionRequest) returns (google.protobuf.Empty);
    rpc ReadOnly (TransactionRequest) returns (google.protobuf.Empty);
}

service LinearPBFTClientApp {
    rpc ReceiveReply (TransactionResponse) returns (google.protobuf.Empty);
}

message TransactionResponse {
    int64 viewNumber = 1;
    int64 timestamp = 2;
    string sender = 3;
    string nodeID = 4;
    int64 result = 5;
    bytes signature = 6;
}

message TransactionRequest {
    Transaction transaction = 1;
    int64 timestamp = 2;
    string sender = 3;
    bytes signature = 4;
}

message Transaction {
    string type = 1; 
    string sender = 2;
    string receiver = 3;
    int64 amount = 4;
}
